added a new endpoint /login, just verify whether a user signed up or not
